upload phân trang

--- a/view/css/mainHome.css
+++ b/view/css/mainHome.css
@@ -5,22 +5,31 @@
 .title-home {
   text-align: center;
   margin: 2rem auto;
-  /* color: white; */
 }
 .lists-card {
   height: max-content;
   width: max-content;
-  background-color: #33333355;
   display: grid;
-  /* width: 70%; */
   margin: 0 auto;
-  grid-template-columns: 300px 300px 300px 300px;
+  grid-template-columns: 300px 300px 300px;
   gap: 2rem;
   justify-content: center;
+  transition: all 0.5s;
 }
 .card-item {
-  background-color: red;
+  background-color: azure;
   height: 400px;
+  box-shadow: 0 5px 5px #33333388;
+  transition: all 0.5s;
+}
+.card-item img {
+  width: 100%;
+  object-fit: cover;
+}
+.card-item .content {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
 }
 #listPage {
   width: max-content;
@@ -30,7 +39,7 @@
   background-color: white !important;
   color: black !important;
 }
-#listPage li {
+#listPage a {
   display: inline-block;
   padding: 5px 20px;
   background-color: black;
