upload responsive phân trang

--- a/view/css/mainHome.css
+++ b/view/css/mainHome.css
@@ -48,3 +48,10 @@
   cursor: pointer;
   visibility: visible;
 }
+@media screen and (max-width: 768px) {
+  .lists-card {
+    width: 95%;
+    gap: 10px;
+    grid-template-columns: 200px 200px;
+  }
+}
