--- a/view/css/mainHome.css
+++ b/view/css/mainHome.css
@@ -47,6 +47,7 @@
   color: white;
   cursor: pointer;
   visibility: visible;
+  margin: 0 5px;
 }
 @media screen and (max-width: 768px) {
   .lists-card {
